# Area-Occupancy-Detection

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  pyproject.toml  requirements.txt
.cursor/commands/: generate-release-notes.md
.github/workflows/: docs.yml  lint.yml  test.yml
custom_components/area_occupancy/: config_flow.py  const.py  manifest.json  utils.py
custom_components/area_occupancy/data/: entity.py
custom_components/area_occupancy/db/: correlation.py  maintenance.py  operations.py
custom_components/area_occupancy/translations/: en.json
docs/: __init__.py  pyproject.toml  requirements.txt
docs/docs/features/: sensors.md
scripts/: bootstrap  changelog  develop  notes  test  visualize_distributions.py
simulator/: pyproject.toml  requirements.txt
tests/: conftest.py  test_binary_sensor.py  test_config_flow.py  test_data_analysis.py  test_data_config.py  test_data_entity.py  test_data_prior.py  test_db_correlation.py  test_db_maintenance.py  test_db_operations.py  test_db_queries.py  test_db_relationships.py  test_db_sync.py  test_time_utils.py  test_utils.py
