[project]
name = "area-occupancy-docs"
version = "0.1.0"
requires-python = ">=3.13.2"
description = "Documentation for Area Occupancy Detection"
dependencies = [
    "mkdocs>=1.6.0,<2.0.0",
    "mkdocs-material>=9.5.0,<10.0.0",
    "mkdocs-minify-plugin>=0.8.0,<1.0.0",
    "mkdocs-include-markdown-plugin>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
