[project]
name = "area-occupancy-simulator"
version = "0.1.0"
requires-python = ">=3.13.2"
description = "Flask-based simulator for Area Occupancy Detection"
dependencies = [
    "Flask>=3.0.0",
    "Flask-Cors>=4.0",
    "homeassistant>=2025.12.4",
    "numpy>=2.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["app.py", "__init__.py"]
